WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185551
[iOS] Text decoration of dragged content does not paint with opacity
https://bugs.webkit.org/show_bug.cgi?id=185551
Summary
[iOS] Text decoration of dragged content does not paint with opacity
Daniel Bates
Reported
2018-05-11 10:21:35 PDT
On iOS, when dragging content that has a text decoration we change the opacity of the original text during the drag. However, if the dragged text had a text decoration the opacity of the decoration remains unchanged.
Attachments
Patch
(2.58 KB, patch)
2018-05-11 13:44 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-05-11 10:32:48 PDT
<
rdar://problem/40166867
>
Daniel Bates
Comment 2
2018-05-11 13:44:48 PDT
Created
attachment 340219
[details]
Patch
Daniel Bates
Comment 3
2018-05-11 13:48:11 PDT
I did not include a test with this change because we do not have existing infrastructure for testing that the appearance of the dragged content marker and it seems non-trivial to add such infrastructure. I am open to ideas.
Wenson Hsieh
Comment 4
2018-05-11 13:52:02 PDT
Comment on
attachment 340219
[details]
Patch Thanks for the patch!
Daniel Bates
Comment 5
2018-05-11 16:01:48 PDT
Comment on
attachment 340219
[details]
Patch Clearing flags on attachment: 340219 Committed
r231725
: <
https://trac.webkit.org/changeset/231725
>
Daniel Bates
Comment 6
2018-05-11 16:01:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug