[iOS] Text decoration of dragged content does not paint with opacity https://bugs.webkit.org/show_bug.cgi?id=185551 <rdar://problem/40166867>

Reviewed by Wenson Hsieh.

Respect alpha when painting the text decoration for dragged content.

* rendering/InlineTextBox.cpp:
(WebCore::InlineTextBox::MarkedTextStyle::areDecorationMarkedTextStylesEqual): Consider alpha when
comparing decoration styles for equality so that we do not coalesce styles with differing alpha.
(WebCore::InlineTextBox::paintMarkedTextDecoration): Respect alpha when painting dragged content.

Canonical link: https://commits.webkit.org/201054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231725 268f45cc-cd09-0410-ab3c-d52691b4dbfc